package sample;

public class Dealer extends Player{
    private double balance;

public Dealer(){
    super("Dealer");
}

}
