@startuml

title __SAMPLE's Class Diagram__\n

  namespace sample {
    class sample.Card {
        + Card()
        + getSuit()
        + getValue()
        + setSuit()
        + setValue()
        + toString()
    }
  }
  

  namespace sample {
    class sample.Controller {
    }
  }
  

  namespace sample {
    class sample.Dealer {
        - balance : double
        + Dealer()
    }
  }
  

  namespace sample {
    class sample.Deck {
        - deckOfCards : ArrayList<Card>
        + Deck()
        + addExtraDeck()
        + getCard()
        + getDeckOfCards()
        + removeCardFromDeck()
        + setDeckOfCards()
        + toString()
        - deckInitialiser()
    }
  }
  

  namespace sample {
    class sample.Game {
        - players : ArrayList<Player>
        - shuffledDecks : Stack<Card>
        + Game()
        + deal()
        + dealACard()
        + gameToString()
        + getPlayers()
        + getShuffledDecks()
        + setPlayers()
        + setShuffledDecks()
    }
  }
  

  namespace sample {
    class sample.Hand {
        - hand : ArrayList<Card>
        + addCard()
        + currentScores()
        + getHand()
        + removeCard()
        + setHand()
        + toString()
    }
  }
  

  namespace sample {
    class sample.Main {
        {static} + main()
        {static} + playTurn()
    }
  }
  

  namespace sample {
    class sample.Player {
        - balance : double
        - hands : ArrayList<Hand>
        - name : String
        + Player()
        + Player()
        + Player()
        + getBalance()
        + getHands()
        + getName()
        + setBalance()
        + setHands()
        + setName()
        + splitCards()
        + toString()
    }
  }
  

  namespace sample {
    class sample.Shuffle {
        {static} + shuffle()
    }
  }
  

  namespace sample {
    enum Suit {
      CLUBS
      DIAMONDS
      HEARTS
      SPADES
    }
  }
  

  namespace sample {
    enum Value {
      ACE
      EIGHT
      FIVE
      FOUR
      JACK
      KING
      NINE
      QUEEN
      SEVEN
      SIX
      TEN
      THREE
      TWO
      value
    }
  }
  

  sample.Card o-- sample.Suit : suit
  sample.Card o-- sample.Value : value
  sample.Dealer -up-|> sample.Player


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
